# sdl2_next

./: CMakeLists.txt  main.cpp
